# ultra-cli-environment

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  spec.md  todo.md
alembic/: env.py
alembic/versions/: d1ae6af26a4a_initial_migration_with_fixed_models.py
app/: main.py  main_optimized.py
app/core/: config.py  error_handling.py  exceptions.py  structured_logging.py
app/db/: __init__.py  base.py  session.py
app/services/: cache_service.py  change_detection_service.py  database_pool_service.py  optimized_storage_service.py  performance_monitoring_service.py  rate_limit_service.py  reddit_service.py  scraper_service.py  storage_service.py  summarizer_service.py
app/utils/: comment_processor.py  db_maintenance.py  delta_report_generator.py  filename_sanitizer.py  performance_monitor.py  relevance.py  report_generator.py  url_validator.py
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  PERFORMANCE_GUIDE.md
docs/Code reviews/Gemini/: code_review_report.md
specs/1st_code_review/: plan.md
specs/1st_epic/: prompt_plan.md  spec.md  todo.md
specs/2nd_epic/: plan.md  prompt_plan.md  spec.md  todo.md
tests/: test_check_updates_api.py  test_enhanced_report_generation.py  test_history_trends_endpoints.py  test_import_structure.py  test_main_security.py
tests/core/: test_config.py
tests/db/: __init__.py  test_config.py  test_extended_models.py  test_models.py
tests/e2e/: README.md  __init__.py  conftest.py  test_concrete_api_validation.py  test_real_api_endpoints.py
tests/fixtures/: reddit_mocks.py
tests/integration/: __init__.py  test_complete_workflow.py  test_concurrent_operations.py  test_data_consistency.py  test_performance.py
tests/performance/: test_optimization_performance.py  test_performance_monitoring.py
tests/security/: __init__.py  test_comprehensive_security.py  test_security_gate.py  test_security_scanning.py
tests/services/: test_change_detection_service.py  test_change_detection_service_comments.py  test_change_detection_trend_analysis.py  test_memory_efficient_comments.py  test_reddit_performance.py  test_reddit_service.py  test_scraper_security.py  test_storage_service.py  test_storage_service_advanced.py  test_storage_service_retention.py  test_summarizer_modernization.py  test_summarizer_service.py
tests/utils/: test_delta_report_generator.py  test_filename_security.py  test_relevance.py  test_relevance_performance.py  test_report_generator.py
